[package]
name = "daily"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
log = "0.4"
env_logger = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.11.0", default-features = false, features = ["yaml"] }
x11rb = { version = "0.8.1", default-features = false, features = ["randr", "xfixes", "xtest"] }
chrono = "0.4.19"

[[bin]]
name = "daily-supervisor"
path = "src/supervisor.rs"
