[package]
name = "daily"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
log = "0.4"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.19"
crossbeam-channel = "0.5.4"
config = { version = "0.13.1", default-features = false, features = ["yaml"] }
x11rb = { version = "0.9.0", default-features = false, features = ["randr", "xfixes", "xtest"] }

[[bin]]
name = "daily-supervisor"
path = "src/supervisor.rs"
